[gd_scene load_steps=31 format=3 uid="uid://bnhpt4tk3spbx"]

[ext_resource type="Texture2D" uid="uid://cwhj225cgyx0c" path="res://resources/Bedroom Furniture Textures/Canvas/Canvas-smoothness.png" id="1_bf7ki"]
[ext_resource type="PackedScene" uid="uid://bbbp6jiaa6lw4" path="res://scene/player.tscn" id="1_trap8"]
[ext_resource type="Texture2D" uid="uid://bx3u83frgcfna" path="res://resources/Bedroom Furniture Textures/Wood_Oak/Wood_Oak-ao.png" id="2_xup4h"]
[ext_resource type="Texture2D" uid="uid://bh1etcxlqb4i0" path="res://resources/- Classic 64 Asset Pack 0.6/Walls/Materials/wall_stucco_03.jpg" id="3_khx0k"]
[ext_resource type="Script" path="res://scene/debug_status_overlay.gd" id="3_vgucp"]
[ext_resource type="Script" path="res://script/stare_monster_manager.gd" id="6_n3j6n"]
[ext_resource type="PackedScene" uid="uid://crw8cw276nyjx" path="res://models/mattress.tscn" id="7_0m8sv"]
[ext_resource type="Script" path="res://script/lamp.gd" id="7_pakay"]
[ext_resource type="PackedScene" uid="uid://di52lpx86rq1w" path="res://models/furniture_bed_pillow.tscn" id="8_erhf1"]
[ext_resource type="PackedScene" uid="uid://bve3v0x1503si" path="res://models/furniture_bed_frame_001.tscn" id="9_5twv0"]
[ext_resource type="PackedScene" uid="uid://bfak6ebff0e" path="res://models/furniture_wardrobe.tscn" id="13_w5tdb"]
[ext_resource type="PackedScene" uid="uid://5bk178xbiik8" path="res://models/furniture_night_stand_drawer.tscn" id="14_3hi0h"]
[ext_resource type="PackedScene" uid="uid://bwg2705alevt6" path="res://models/electronic_lamp.tscn" id="15_m5v3n"]
[ext_resource type="Script" path="res://script/warning_flash.gd" id="15_q2ewj"]
[ext_resource type="AudioStream" uid="uid://cfap3tj0miwm3" path="res://resources/sfx/Horror SFX Free/Ambient/Vent_airflow.wav" id="16_oo51b"]
[ext_resource type="Script" path="res://script/night_manager.gd" id="17_gcpeh"]
[ext_resource type="AudioStream" uid="uid://dgbqg6re3gbjf" path="res://resources/sfx/Horror SFX Free/Ambient/Rain_Medium_2.wav" id="19_vdox6"]
[ext_resource type="Script" path="res://scene/thunder_noise.gd" id="20_lc8ul"]
[ext_resource type="AudioStream" uid="uid://dxp2t5ma3fmg0" path="res://resources/sfx/thunder_sound/heavy-thunder-sound-effect-no-copyright-338980.mp3" id="21_asif5"]
[ext_resource type="AudioStream" uid="uid://m682v8tqx60c" path="res://resources/sfx/thunder_sound/loud-thunder-192165.mp3" id="22_e4e8l"]
[ext_resource type="AudioStream" uid="uid://bda6hrlfkinoa" path="res://resources/sfx/thunder_sound/peals-of-thunder-191992.mp3" id="23_mbpm4"]
[ext_resource type="AudioStream" uid="uid://bdikn61sl6841" path="res://resources/sfx/thunder_sound/thunder-338046.mp3" id="24_siikd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6o0di"]
albedo_texture = ExtResource("1_bf7ki")
roughness = 0.82

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6q0qn"]
albedo_texture = ExtResource("2_xup4h")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w8vgl"]
albedo_texture = ExtResource("2_xup4h")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_235vl"]
albedo_texture = ExtResource("2_xup4h")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ei8s6"]
albedo_texture = ExtResource("2_xup4h")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_epycl"]
albedo_texture = ExtResource("3_khx0k")
uv1_scale = Vector3(10.045, 4.955, 4.7)
uv1_offset = Vector3(1.775, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yvw88"]
albedo_texture = ExtResource("2_xup4h")

[sub_resource type="Environment" id="Environment_htmkl"]
background_mode = 3
ambient_light_source = 3
ambient_light_color = Color(0.0235294, 0.133333, 0.152941, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.2
fog_light_color = Color(0.385462, 0.559097, 0.555595, 1)
volumetric_fog_density = 0.5316
volumetric_fog_albedo = Color(0.333111, 0.520862, 0.525129, 1)
volumetric_fog_detail_spread = 2.37841

[node name="main" type="Node3D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="fall_asleep" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.5
offset_top = -34.5
offset_right = 269.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.713726, 1, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 50
text = "You have fallen asleep"

[node name="game_over" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -34.5
offset_right = 280.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.836322, 0, 0.18734, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 50
text = "You failed to fall asleep"

[node name="DebugStatusOverlay" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_vgucp")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugStatusOverlay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SleepLabel" type="Label" parent="CanvasLayer/DebugStatusOverlay/VBoxContainer"]
layout_mode = 2

[node name="SanityLabel" type="Label" parent="CanvasLayer/DebugStatusOverlay/VBoxContainer"]
layout_mode = 2

[node name="CoveredLabel" type="Label" parent="CanvasLayer/DebugStatusOverlay/VBoxContainer"]
layout_mode = 2

[node name="ViewLabel" type="Label" parent="CanvasLayer/DebugStatusOverlay/VBoxContainer"]
layout_mode = 2

[node name="ViewTimeLabel" type="Label" parent="CanvasLayer/DebugStatusOverlay/VBoxContainer"]
layout_mode = 2

[node name="EyeLabel" type="Label" parent="CanvasLayer/DebugStatusOverlay/VBoxContainer"]
layout_mode = 2

[node name="SafeLabel" type="Label" parent="CanvasLayer/DebugStatusOverlay/VBoxContainer"]
layout_mode = 2

[node name="SleepBar" type="ProgressBar" parent="CanvasLayer/DebugStatusOverlay/VBoxContainer"]
layout_mode = 2

[node name="SanityBar" type="ProgressBar" parent="CanvasLayer/DebugStatusOverlay/VBoxContainer"]
layout_mode = 2

[node name="WarningFlash" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.439216, 0.0117647, 0, 1)
script = ExtResource("15_q2ewj")

[node name="furnitures" type="Node3D" parent="."]

[node name="bed" type="Node3D" parent="furnitures"]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0.234485, 2.52689)

[node name="Furniture_Mattress" parent="furnitures/bed" instance=ExtResource("7_0m8sv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.471153, 0)

[node name="Furniture_BedPillow" parent="furnitures/bed" instance=ExtResource("8_erhf1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.948465, 0.988481)

[node name="Furniture_BedFrame_001" parent="furnitures/bed" instance=ExtResource("9_5twv0")]

[node name="Furniture_Wardrobe_002" parent="furnitures" instance=ExtResource("13_w5tdb")]
transform = Transform3D(-1.4, 0, 2.87647e-07, 0, 1.285, 0, -2.11394e-07, 0, -1.905, 4, 0.196205, 2.47436)

[node name="Furniture_NightStand2Drawer" parent="furnitures" instance=ExtResource("14_3hi0h")]
transform = Transform3D(-1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, -1, -1.95621, 0.191361, 3.6971)

[node name="Furniture_NightStand2Drawer2" parent="furnitures" instance=ExtResource("14_3hi0h")]
transform = Transform3D(-1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, -1, 1.96125, 0.191361, 3.6971)

[node name="Electronic_Lamp" parent="furnitures" instance=ExtResource("15_m5v3n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.96547, 1.21605, 3.73868)
script = ExtResource("7_pakay")

[node name="OmniLight3D" type="OmniLight3D" parent="furnitures/Electronic_Lamp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
light_color = Color(1, 0.87451, 0.666667, 1)
light_energy = 0.152
omni_range = 8.0

[node name="room" type="Node3D" parent="."]

[node name="floor" type="CSGBox3D" parent="room"]
material_override = SubResource("StandardMaterial3D_6o0di")
size = Vector3(10, 0.5, 10)

[node name="ceilling" type="CSGBox3D" parent="room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000848293, 4.00054, 0.000511885)
material_override = SubResource("StandardMaterial3D_6q0qn")
size = Vector3(10, 0.5, 10)

[node name="wall4" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.00174539, 0, 0.999998, 0, 1, 0, -0.999998, 0, -0.00174539, 0.00301269, 1.99971, 5.00482)
material_override = SubResource("StandardMaterial3D_w8vgl")
size = Vector3(0.0673828, 3.48499, 10)

[node name="wall5" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.00174539, 0, 0.999998, 0, 1, 0, -0.999998, 0, -0.00174539, 0.00301269, 1.99971, -4.99518)
material_override = SubResource("StandardMaterial3D_235vl")
size = Vector3(0.0673828, 3.48499, 10)

[node name="wall6" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.999999, 0, -0.00174543, 0, 1, 0, 0.00174543, 0, -0.999999, 5.00301, 1.99971, 0.00482416)
material_override = SubResource("StandardMaterial3D_ei8s6")
size = Vector3(0.0673828, 3.48499, 10)
material = SubResource("StandardMaterial3D_epycl")

[node name="wall7" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.999999, 0, -0.00174543, 0, 1, 0, 0.00174543, 0, -0.999999, -4.99699, 1.99971, 0.00482416)
material_override = SubResource("StandardMaterial3D_yvw88")
size = Vector3(0.0673828, 3.48499, 10)

[node name="player" parent="." instance=ExtResource("1_trap8")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.0790441, 1.46175, 3.39325)
motion_mode = 1

[node name="stareMonster_manager" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.47428)
script = ExtResource("6_n3j6n")

[node name="stareMonster_left" parent="stareMonster_manager"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.59, 0, 0, 0, 0.59, 0, 0, 0, 0.59, -1.32806, 1.10327, 0.120211)
script = null

[node name="stareMonster_mid" parent="stareMonster_manager"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.59, 0, 0, 0, 0.59, 0, 0, 0, 0.59, 0.128123, 1.92765, 0.120211)
script = null

[node name="stareMonster_right" parent="stareMonster_manager"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.59, 0, 0, 0, 0.59, 0, 0, 0, 0.59, 1.32882, 1.10327, 0.120211)
script = null

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_htmkl")

[node name="walk_monster" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 3, 0.22018, 2.31401)
script = null

[node name="NightManager" type="Node3D" parent="."]
script = ExtResource("17_gcpeh")

[node name="bg_music" type="Node3D" parent="."]

[node name="bg_noise" type="AudioStreamPlayer" parent="bg_music"]
stream = ExtResource("16_oo51b")
autoplay = true

[node name="rain" type="AudioStreamPlayer" parent="bg_music"]
stream = ExtResource("19_vdox6")
autoplay = true

[node name="thunder" type="AudioStreamPlayer" parent="bg_music"]
script = ExtResource("20_lc8ul")
audio_clips = Array[AudioStream]([ExtResource("21_asif5"), ExtResource("22_e4e8l"), ExtResource("23_mbpm4"), ExtResource("24_siikd")])

[node name="Timer" type="Timer" parent="bg_music"]
